# landingzones

./: .gitignore  AGENTS.md  CONTEXT.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/llm_issues/: 2026-05-12-archive-entry-end-transfers.md  2026-05-13-version-release-action.md
.github/workflows/: build-standalone.yml  publish-conda.yml  publish.yml  release-on-version.yml  tests.yml
conda/: meta.yaml
docs/: HARDLINKS.md
docs/adr/: 0001-runtime-scoped-cron-activation.md  0002-execution-context-cron-activation.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
input/: .gitkeep  transfers.tsv
log/: .gitkeep
output/: .gitkeep
output/crontab.d/: localhost.testuser.Landing_Zone.cron
output/scripts/: transfer_001.sh
scripts/: build_python_standalone_bundle.py  build_python_standalone_bundle.sh
src/landingzones/: __init__.py  check_deployment_readiness.py  cli.py  config.py  entrypoint_readiness.py  generate_cron_files.py  plot_transfer_status.py  readiness_ops.py  table.py  transfer_catalog.py  transfer_definitions.py  transfer_loading.py  validate_separation.py
src/landingzones/config/: config.yaml.example  transfers.tsv
src/landingzones/templates/: lz_run_validation.sh
tests/: __init__.py  test_check_deployment_readiness.py  test_cli.py  test_config.py  test_entrypoint_readiness.py  test_generate_cron_files.py  test_operator_docs.py  test_plot_transfer_status.py  test_python_standalone_packaging.py  test_transfer_catalog.py  test_validate_separation.py
